# minigdb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  completed.md  example.ipynb  issues.md  pyproject.toml
.github/workflows/: release.yml
demo/: demo.py  example.ipynb  random_graph_networkx.ipynb
docs/: algorithms.md  python.md  query-language.md  server.md
src/: csv_import.rs  gql.pest  lib.rs  main.rs  python.rs
src/algorithms/: bfs.rs  centrality.rs  community.rs  components.rs  flow.rs  louvain.rs  mod.rs  shortest_path.rs  similarity.rs  triangle.rs
src/graph/: constraints.rs  mod.rs  ops.rs
src/query/: ast.rs  executor.rs  mod.rs  parser.rs
src/server/: auth.rs  http.rs  locations.rs  mod.rs  protocol.rs  registry.rs
src/server/static/: gui.html
src/storage/: mod.rs  rocks_store.rs
src/transaction/: mod.rs  operation.rs
src/types/: edge.rs  error.rs  id.rs  mod.rs  node.rs  value.rs
tests/: test_api.py
