[package]
name = "minigdb"
version = "0.1.0"
edition = "2021"
description = "An embedded property-graph database in Rust with a GQL query language, RocksDB-backed ACID storage, graph algorithms, and Python bindings"
license = "LGPL-3.0"
repository = "https://github.com/jerichomcleod/minigdb"
documentation = "https://docs.rs/minigdb"
readme = "README.md"
keywords = ["graph", "database", "gql", "embedded", "rocksdb"]
categories = ["database", "data-structures"]

[package.metadata.docs.rs]
# Build docs with the server and GUI features enabled; "python" is excluded
# because it requires a Python interpreter at link time.
features = ["repl", "server", "gui"]
no-default-features = true

[[bin]]
name = "minigdb"
path = "src/main.rs"
required-features = ["repl"]

[lib]
name = "minigdb"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode     = "1"
pest        = "2"
pest_derive = "2"
thiserror   = "2"
crc32fast   = "1"
log         = "0.4"
env_logger  = "0.11"
rocksdb     = "0.22"
csv         = "1.3"
rustyline   = { version = "14", optional = true }
dirs        = { version = "5", optional = true }
pyo3        = { version = "0.22", features = ["extension-module"], optional = true }
tokio       = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "signal"], optional = true }
toml        = "0.8"
sha2        = { version = "0.10", optional = true }
rpassword   = { version = "7", optional = true }
axum        = { version = "0.7", optional = true }

[features]
default = ["repl", "server", "gui"]
repl    = ["rustyline", "dirs", "rpassword"]
server  = ["dep:tokio", "dep:sha2", "dirs"]
gui     = ["server", "dep:axum"]
python  = ["pyo3", "dirs"]

[dev-dependencies]
insta    = "1"
proptest = "1"
tempfile = "3"
